--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="lib" path="lib/jbox2d-testbed-2.1.2.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/lejos_nxj/lib/classes.jar"/>
 	<classpathentry kind="lib" path="lib/lejos_nxj/lib/jtools.jar"/>
-	<classpathentry kind="lib" path="lib/pccomm.jar"/>
-	<classpathentry kind="lib" path="lib/pctools.jar"/>
+	<classpathentry kind="lib" path="lib/lejos_nxj/lib/pccomm.jar"/>
+	<classpathentry kind="lib" path="lib/lejos_nxj/lib/pctools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
