--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tests"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-1.6.0-openjdk-1.6.0.0.x86_64"/>
 	<classpathentry kind="lib" path="lib/lejos_nxj/lib/classes.jar"/>
 	<classpathentry kind="lib" path="lib/lejos_nxj/lib/jtools.jar"/>
 	<classpathentry kind="lib" path="lib/lejos_nxj/lib/pccomm.jar"/>
@@ -10,5 +9,6 @@
 	<classpathentry kind="lib" path="lib/jbox2d-library-2.1.2.1-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/mockito-all-1.9.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
