Changed Switch Robot to now switch colour. Still problems on GUI. SimpleWorldGUI is now located in main package

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = DEBUG, CA, FA
+log4j.rootLogger = ALL, CA, FA
 
 
 #Console Appender
@@ -6,6 +6,7 @@ log4j.rootLogger = DEBUG, CA, FA
 log4j.appender.CA = org.apache.log4j.ConsoleAppender
 log4j.appender.CA.layout = org.apache.log4j.PatternLayout
 log4j.appender.CA.layout.ConversionPattern = [%d{dd/MMM HH:mm:ss}] %p : %c - %m%n
+
 
 #File Appender - Log Files are inside "logs" folder
 
