--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="lib" path="lib/mockito-all-1.9.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jbox2d-testbed-2.1.2.1-SNAPSHOT-jar-with-dependencies.jar" sourcepath="/afs/inf.ed.ac.uk/user/s09/s0906575/Desktop/jbox2d-2.1.2.1/jbox2d-testbed/src"/>
+	<classpathentry kind="lib" path="lib/jbox2d-testbed-2.1.2.1-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="lib/lejos_nxj/lib/classes.jar"/>
 	<classpathentry kind="lib" path="lib/lejos_nxj/lib/pccomm.jar"/>
 	<classpathentry kind="lib" path="lib/jopt-simple-4.3.jar"/>
